tests/fixtures/invalid/pow_dict_float_int.py
# Cannot call pow() with Dict[str, int], Float, Int
x = pow({"a": 1}, 1.0, 1)
